--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-page{
+  width: 100%;
+  height: 100vh;
+  background-image: url("./images/newyorkcity.jpg");
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+}
+
+.todo-container{
+  width: 35%;
+  height: 80%;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(3px);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: 14px 15px 37px 5px rgba(0,0,0,0.75);
+}
+
+.todo-container h1{
+  transform: translateY(-10px);
+  font-family: 'Cormorant', serif;
+}
+
+.todo-container ul{
+  padding: 10px;
+  list-style: none;
+  margin-top: 30px;
+  width: 90%;
+  height: calc(73% - 2px) ;
+  overflow-y: scroll;
+  text-align: center;
+  border-radius: 10px;
+  background: linear-gradient(to bottom, lightgray, white);
+  background-image: url("./images/vitmarmor.jpg");
+  background-size: contain;
+  border: solid 1px lightgray
+}
+
+.todo-container ul li {
+  width: 100%;
+  background-color: #f2f2f2;
+  color: black;
+  border-radius: 6px;
+  border: solid lightgray 0.5px;
+  padding: 5px;
+  padding-left: 7px;
+  margin-bottom: 5px;
+  text-align: left;
+  position: relative;
+  transition: all 0.2s ease;
+}
+
+.todo-container ul li:hover{
+  transform: scale(1.04);
+
+}
+
+.todo-container ul li button {
+  position: absolute;
+  right: 10px;
+}
+
+.todo-container .logout-button{
+  padding: 0;
+  margin: 0;
+  width: 15px;
+  height: 15px;
+  background-color: black;
   color: white;
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  position: absolute;
+  text-align: center;
+  top: -5px;
+  left: -5px;
+  box-shadow: -10px -8px 31px 0px rgba(0,0,0,0.75);
+  transition: all 0.5s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.logout-button::before{
+  content: "";
+  position: relative;
+  height: 0px;
+  width: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logout-button:hover::before{
+  content: "";
+  position: absolute;
+  transition: all 0.3s ease;
+  background-color: red;
+  width: 50px;
+  height: 20px;
+  border-radius: 5px;
+}
+
+.delete-button{
+  border: none;
+  outline: none;
+  background-color: transparent;
+  transform: translateY(-2.5px);
+}
+
+.todo-input{
+  background-color: transparent;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-bottom: solid 1px gray;
+}
+
+.add-todo-button{
+  transform: translate(12px, 5px);
+  outline: none;
+  border: none;
+  /* border: solid lightgray 0.5px ; */
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
 }
